[gd_scene load_steps=5 format=3 uid="uid://d0wtou46drev3"]

[ext_resource type="Theme" uid="uid://pt1hrfiuwfpg" path="res://theme_base/theme.tres" id="1_6v7de"]
[ext_resource type="Script" uid="uid://cef5ph2fi6xj7" path="res://src/ui_components/transfers/player_offer_loan/player_offer_loan.gd" id="2_llawq"]
[ext_resource type="LabelSettings" uid="uid://b4gu78rjvdfx4" path="res://theme_base/label/label_settings_title.tres" id="3_8a1ku"]
[ext_resource type="Script" uid="uid://cnyyowwlb04kl" path="res://src/ui_components/base/defaults/default_button.gd" id="4_s2og8"]

[node name="PlayerOfferLoan" type="VBoxContainer"]
custom_minimum_size = Vector2(960, 0)
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 0.41
offset_bottom = 0.199982
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_6v7de")
script = ExtResource("2_llawq")

[node name="Title" type="Label" parent="."]
layout_mode = 2
text = "Loan"
label_settings = ExtResource("3_8a1ku")

[node name="Description" type="Label" parent="."]
layout_mode = 2
text = "Make an offer to get the player on loan."

[node name="Details" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Price" type="HBoxContainer" parent="Details"]
layout_mode = 2

[node name="MoneyLabel" type="Label" parent="Details/Price"]
layout_mode = 2
size_flags_horizontal = 3
text = "Money"

[node name="Money" type="HBoxContainer" parent="Details/Price"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2

[node name="Less" type="Button" parent="Details/Price/Money"]
auto_translate_mode = 2
layout_mode = 2
text = "-"
script = ExtResource("4_s2og8")
metadata/_custom_type_script = "uid://cnyyowwlb04kl"

[node name="Amount" type="LineEdit" parent="Details/Price/Money"]
unique_name_in_owner = true
auto_translate_mode = 2
layout_mode = 2
size_flags_horizontal = 3
text = "15000"
alignment = 1

[node name="More" type="Button" parent="Details/Price/Money"]
auto_translate_mode = 2
layout_mode = 2
text = "+"
script = ExtResource("4_s2og8")
metadata/_custom_type_script = "uid://cnyyowwlb04kl"

[node name="Date" type="HBoxContainer" parent="Details"]
layout_mode = 2

[node name="DateLabel" type="Label" parent="Details/Date"]
layout_mode = 2
size_flags_horizontal = 3
text = "Date"

[node name="Date" type="OptionButton" parent="Details/Date"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2

[node name="Confirm" type="Button" parent="."]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"ImportantButton"
text = "Confirm"
script = ExtResource("4_s2og8")
metadata/_custom_type_script = "uid://cnyyowwlb04kl"

[connection signal="pressed" from="Details/Price/Money/Less" to="." method="_on_less_pressed"]
[connection signal="pressed" from="Details/Price/Money/More" to="." method="_on_more_pressed"]
[connection signal="pressed" from="Confirm" to="." method="_on_confirm_pressed"]
